# CursesTk

./: .cproject  .gitignore  .project  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in~  config.status  configure  configure.ac  cursestk.pc  cursestk.pc.in  libtool
.externalToolBuilders/: make.launch
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
example/: Makefile  MyWin.cc  MyWin.h  cursestk.cc  cursestk.h  events.h  main.cc
src/: Makefile  Makefile.am  Makefile.in  cursestk.cc  cursestk.h  events.h
src/.deps/: cursestk.Plo
